Missing DataFrame and Fill It added.

--- a/Spark DataFrame Basic Operations..ipynb
+++ b/Spark DataFrame Basic Operations..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f139be5",
+   "id": "d6d05e2a",
    "metadata": {},
    "source": [
     "# Spark DataFrame Basic Operations"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e605f8fe",
+   "id": "29b417b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71f18d61",
+   "id": "5ad97e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fae9eb59",
+   "id": "129a46b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eb4d8773",
+   "id": "2d4f6dbc",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4be9cba2",
+   "id": "92d9da34",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ce130a54",
+   "id": "54766bb2",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "de3fd362",
+   "id": "0d272009",
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +177,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "2c3c8501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = df.filter(df['Low'] == 197.16).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a251e819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = result[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d8ab505d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "220441900"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row.asDict()['Volume']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c0ea708b",
+   "id": "54f3f38c",
    "metadata": {},
    "outputs": [],
    "source": []
