exercise training part 1

--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "9d80120b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "9ce34d00",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "59d9eca4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "2846102d",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
+   "id": "6a7f3faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "| age|\n",
+      "+----+\n",
+      "|null|\n",
+      "|  30|\n",
+      "|  19|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(['age']).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "f23a9e22",
    "metadata": {},
    "outputs": [
@@ -78,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "0a5738f6",
    "metadata": {},
    "outputs": [
@@ -88,7 +113,7 @@
        "['age', 'name']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "c5f8d2d4",
    "metadata": {},
    "outputs": [
@@ -126,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "fbfe4767",
    "metadata": {},
    "outputs": [],
@@ -136,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "53d4ba8d",
    "metadata": {},
    "outputs": [],
@@ -147,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "89796454",
    "metadata": {},
    "outputs": [],
@@ -157,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "b4643c2f",
    "metadata": {},
    "outputs": [],
@@ -167,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "b876a66b",
    "metadata": {},
    "outputs": [
@@ -188,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "352308b7",
    "metadata": {},
    "outputs": [
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "07c9f37f",
    "metadata": {},
    "outputs": [
@@ -238,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "e2e98758",
    "metadata": {},
    "outputs": [
@@ -248,7 +273,7 @@
        "pyspark.sql.column.Column"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "1de310de",
    "metadata": {},
    "outputs": [
@@ -269,7 +294,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "6a55eb97",
    "metadata": {},
    "outputs": [
@@ -290,7 +315,7 @@
        "pyspark.sql.types.Row"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "3d2282a1",
    "metadata": {},
    "outputs": [
@@ -326,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "e8e373af",
    "metadata": {},
    "outputs": [
@@ -351,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "aafa3202",
    "metadata": {},
    "outputs": [
@@ -376,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "c0ae4446",
    "metadata": {},
    "outputs": [
@@ -401,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "6d9b3904",
    "metadata": {},
    "outputs": [
@@ -426,13 +451,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "id": "0e9f66f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.createOrReplaceGlobalTempView('people')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "613e2dc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+\n",
+      "| age|   name|\n",
+      "+----+-------+\n",
+      "|null|Michael|\n",
+      "|  30|   Andy|\n",
+      "|  19| Justin|\n",
+      "+----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b07c837",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
