--- a/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
+++ b/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
@@ -32,12 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark = SparkSession.builder.appName('exercise').getOrCreate()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = spark.read.csv('../Spark_DataFrame_Project_Exercise/walmart_stock.csv',header=True,inferSchema=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -75,12 +82,14 @@
        "['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'Adj Close']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +119,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.printSchema()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,34 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row(Date=datetime.datetime(2012, 1, 3, 0, 0), Open=59.970001, High=61.060001, Low=59.869999, Close=60.330002, Volume=12668800, Adj Close=52.619234999999996)\n",
-      "\n",
-      "\n",
-      "Row(Date=datetime.datetime(2012, 1, 4, 0, 0), Open=60.209998999999996, High=60.349998, Low=59.470001, Close=59.709998999999996, Volume=9593300, Adj Close=52.078475)\n",
-      "\n",
-      "\n",
-      "Row(Date=datetime.datetime(2012, 1, 5, 0, 0), Open=59.349998, High=59.619999, Low=58.369999, Close=59.419998, Volume=12768200, Adj Close=51.825539)\n",
-      "\n",
-      "\n",
-      "Row(Date=datetime.datetime(2012, 1, 6, 0, 0), Open=59.419998, High=59.450001, Low=58.869999, Close=59.0, Volume=8069400, Adj Close=51.45922)\n",
-      "\n",
-      "\n",
-      "Row(Date=datetime.datetime(2012, 1, 9, 0, 0), Open=59.029999, High=59.549999, Low=58.919998, Close=59.18, Volume=6679300, Adj Close=51.616215000000004)\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Row(Date=datetime.datetime(2012, 1, 3, 0, 0), Open=59.970001, High=61.060001, Low=59.869999, Close=60.330002, Volume=12668800, Adj Close=52.619234999999996),\n",
+       " Row(Date=datetime.datetime(2012, 1, 4, 0, 0), Open=60.209998999999996, High=60.349998, Low=59.470001, Close=59.709998999999996, Volume=9593300, Adj Close=52.078475),\n",
+       " Row(Date=datetime.datetime(2012, 1, 5, 0, 0), Open=59.349998, High=59.619999, Low=58.369999, Close=59.419998, Volume=12768200, Adj Close=51.825539),\n",
+       " Row(Date=datetime.datetime(2012, 1, 6, 0, 0), Open=59.419998, High=59.450001, Low=58.869999, Close=59.0, Volume=8069400, Adj Close=51.45922),\n",
+       " Row(Date=datetime.datetime(2012, 1, 9, 0, 0), Open=59.029999, High=59.549999, Low=58.919998, Close=59.18, Volume=6679300, Adj Close=51.616215000000004)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,29 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
-      "|summary|              Open|             High|              Low|            Close|           Volume|        Adj Close|\n",
-      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
-      "|  count|              1258|             1258|             1258|             1258|             1258|             1258|\n",
-      "|   mean| 72.35785375357709|72.83938807631165| 71.9186009594594|72.38844998012726|8222093.481717011|67.23883848728146|\n",
-      "| stddev|  6.76809024470826|6.768186808159218|6.744075756255496|6.756859163732991|  4519780.8431556|6.722609449996857|\n",
-      "|    min|56.389998999999996|        57.060001|        56.299999|        56.419998|          2094900|        50.363689|\n",
-      "|    max|         90.800003|        90.970001|            89.25|        90.470001|         80898100|84.91421600000001|\n",
-      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DataFrame[summary: string, Open: string, High: string, Low: string, Close: string, Volume: string, Adj Close: string]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,44 +193,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- summary: string (nullable = true)\n",
-      " |-- Open: string (nullable = true)\n",
-      " |-- High: string (nullable = true)\n",
-      " |-- Low: string (nullable = true)\n",
-      " |-- Close: string (nullable = true)\n",
-      " |-- Volume: string (nullable = true)\n",
-      " |-- Adj Close: string (nullable = true)\n",
+      " |-- Date: timestamp (nullable = true)\n",
+      " |-- Open: double (nullable = true)\n",
+      " |-- High: double (nullable = true)\n",
+      " |-- Low: double (nullable = true)\n",
+      " |-- Close: double (nullable = true)\n",
+      " |-- Volume: integer (nullable = true)\n",
+      " |-- Adj Close: double (nullable = true)\n",
       "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df.printSchema()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+------------------+------------------+------------------+--------+\n",
+      "|              Open|              High|               Low|             Close|  Volume|\n",
+      "+------------------+------------------+------------------+------------------+--------+\n",
+      "|         59.970001|         61.060001|         59.869999|         60.330002|12668800|\n",
+      "|60.209998999999996|         60.349998|         59.470001|59.709998999999996| 9593300|\n",
+      "|         59.349998|         59.619999|         58.369999|         59.419998|12768200|\n",
+      "|         59.419998|         59.450001|         58.869999|              59.0| 8069400|\n",
+      "|         59.029999|         59.549999|         58.919998|             59.18| 6679300|\n",
+      "|             59.43|59.709998999999996|             58.98|59.040001000000004| 6907300|\n",
+      "|         59.060001|         59.529999|59.040001000000004|         59.400002| 6365600|\n",
+      "|59.790001000000004|              60.0|         59.400002|              59.5| 7236400|\n",
+      "|             59.18|59.610001000000004|59.009997999999996|59.540001000000004| 7729300|\n",
+      "|         59.869999|60.110001000000004|             59.52|         59.849998| 8500000|\n",
+      "|59.790001000000004|         60.029999|         59.650002|60.009997999999996| 5911400|\n",
+      "|             59.93|             60.73|             59.75|60.610001000000004| 9234600|\n",
+      "|             60.75|             61.25|         60.669998|61.009997999999996|10378800|\n",
+      "|         60.810001|             60.98|60.509997999999996|             60.91| 7134100|\n",
+      "|             60.75|              62.0|             60.75|61.389998999999996| 7362800|\n",
+      "|             61.18|61.610001000000004|61.040001000000004|         61.470001| 5915800|\n",
+      "|         61.799999|             61.84|             60.77|         60.970001| 7436200|\n",
+      "|60.860001000000004|         61.119999|60.540001000000004|60.709998999999996| 6287300|\n",
+      "|         60.470001|             61.32|         60.349998|         61.299999| 7636900|\n",
+      "|         61.529999|             61.57|         60.580002|61.360001000000004| 9761500|\n",
+      "+------------------+------------------+------------------+------------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(['Open', 'High', 'Low', 'Close', 'Volume']).show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -265,9 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -314,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -341,9 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -379,9 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -408,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -436,9 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -464,9 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -493,9 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -527,9 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -568,9 +586,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -582,9 +600,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
