Basic Opretors are added.

--- a/PySpark.ipynb
+++ b/PySpark.ipynb
@@ -103,9 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0a5738f6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -113,7 +115,7 @@
        "['age', 'name']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c5f8d2d4",
    "metadata": {},
    "outputs": [
@@ -166,8 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_schema = [StructField('age', IntegerType(), True),\n",
-    "              StructField('name', StringType(), True)]"
+    "data_schema = [StructField('age', IntegerType(), True), \n",
+    "               StructField('name', StringType(), True)]"
    ]
   },
   {
