--- a/Spark DataFrame Basic Operations..ipynb
+++ b/Spark DataFrame Basic Operations..ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "29b417b3",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5ad97e46",
    "metadata": {},
    "outputs": [],
@@ -30,17 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "129a46b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.csv('../course-material/Spark_DataFrames/appl_stock.csv', inferSchema=True, header=True)"
+    "df = spark.read.csv('./course-material/Spark_DataFrames/appl_stock.csv', inferSchema=True, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2d4f6dbc",
    "metadata": {},
    "outputs": [
