--- a/Spark DataFrame Dates and Timestamps.ipynb
+++ b/Spark DataFrame Dates and Timestamps.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fcd89d96",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d3884ddc",
    "metadata": {},
    "outputs": [],
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fdb5ab2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.csv('../course-material/Spark_DataFrames/appl_stock.csv', header=True, inferSchema=True)"
+    "df = spark.read.csv('../PySpark/course-material/Spark_DataFrames/appl_stock.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "9794645b",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "[Row(Date=datetime.datetime(2010, 1, 4, 0, 0), Open=213.429998, High=214.499996, Low=212.38000099999996, Close=214.009998, Volume=123432400, Adj Close=27.727039)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "7fa5cef1",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "507b0b8d",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "f49b6ab3",
    "metadata": {},
    "outputs": [
@@ -130,42 +130,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+\n",
-      "|month(Date)|\n",
-      "+-----------+\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          1|\n",
-      "|          2|\n",
-      "+-----------+\n",
+      "+----------------+\n",
+      "|weekofyear(Date)|\n",
+      "+----------------+\n",
+      "|               1|\n",
+      "|               1|\n",
+      "|               1|\n",
+      "|               1|\n",
+      "|               1|\n",
+      "|               2|\n",
+      "|               2|\n",
+      "|               2|\n",
+      "|               2|\n",
+      "|               2|\n",
+      "|               3|\n",
+      "|               3|\n",
+      "|               3|\n",
+      "|               3|\n",
+      "|               4|\n",
+      "|               4|\n",
+      "|               4|\n",
+      "|               4|\n",
+      "|               4|\n",
+      "|               5|\n",
+      "+----------------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select(month(df['Date'])).show()"
+    "df.select(weekofyear(df['Date'])).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ecd43587",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "b0a87e1a",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "e41e4e6a",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "991bba54",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "c613e178",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "ae08f4a7",
    "metadata": {},
    "outputs": [
@@ -279,6 +279,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "428d9b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5477537e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed431d4",
    "metadata": {},
    "outputs": [],
    "source": []
