--- a/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
+++ b/course-material/Spark_DataFrame_Project_Exercise/Spark DataFrames Project Exercise.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'Adj Close']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " Row(Date=datetime.datetime(2012, 1, 9, 0, 0), Open=59.029999, High=59.549999, Low=58.919998, Close=59.18, Volume=6679300, Adj Close=51.616215000000004)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,22 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[summary: string, Open: string, High: string, Low: string, Close: string, Volume: string, Adj Close: string]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
+      "|summary|              Open|             High|              Low|            Close|           Volume|        Adj Close|\n",
+      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
+      "|  count|              1258|             1258|             1258|             1258|             1258|             1258|\n",
+      "|   mean| 72.35785375357709|72.83938807631165| 71.9186009594594|72.38844998012726|8222093.481717011|67.23883848728146|\n",
+      "| stddev|  6.76809024470826|6.768186808159218|6.744075756255496|6.756859163732991|  4519780.8431556|6.722609449996857|\n",
+      "|    min|56.389998999999996|        57.060001|        56.299999|        56.419998|          2094900|        50.363689|\n",
+      "|    max|         90.800003|        90.970001|            89.25|        90.470001|         80898100|84.91421600000001|\n",
+      "+-------+------------------+-----------------+-----------------+-----------------+-----------------+-----------------+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "df.describe()"
+    "df.describe().show()"
    ]
   },
   {
@@ -193,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -201,95 +207,69 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- Date: timestamp (nullable = true)\n",
-      " |-- Open: double (nullable = true)\n",
-      " |-- High: double (nullable = true)\n",
-      " |-- Low: double (nullable = true)\n",
-      " |-- Close: double (nullable = true)\n",
-      " |-- Volume: integer (nullable = true)\n",
-      " |-- Adj Close: double (nullable = true)\n",
+      " |-- summary: string (nullable = true)\n",
+      " |-- Open: string (nullable = true)\n",
+      " |-- High: string (nullable = true)\n",
+      " |-- Low: string (nullable = true)\n",
+      " |-- Close: string (nullable = true)\n",
+      " |-- Volume: string (nullable = true)\n",
+      " |-- Adj Close: string (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.printSchema()"
+    "df.describe().printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import "
+    "from pyspark.sql.functions import format_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------+------------------+------------------+------------------+--------+\n",
-      "|              Open|              High|               Low|             Close|  Volume|\n",
-      "+------------------+------------------+------------------+------------------+--------+\n",
-      "|         59.970001|         61.060001|         59.869999|         60.330002|12668800|\n",
-      "|60.209998999999996|         60.349998|         59.470001|59.709998999999996| 9593300|\n",
-      "|         59.349998|         59.619999|         58.369999|         59.419998|12768200|\n",
-      "|         59.419998|         59.450001|         58.869999|              59.0| 8069400|\n",
-      "|         59.029999|         59.549999|         58.919998|             59.18| 6679300|\n",
-      "|             59.43|59.709998999999996|             58.98|59.040001000000004| 6907300|\n",
-      "|         59.060001|         59.529999|59.040001000000004|         59.400002| 6365600|\n",
-      "|59.790001000000004|              60.0|         59.400002|              59.5| 7236400|\n",
-      "|             59.18|59.610001000000004|59.009997999999996|59.540001000000004| 7729300|\n",
-      "|         59.869999|60.110001000000004|             59.52|         59.849998| 8500000|\n",
-      "|59.790001000000004|         60.029999|         59.650002|60.009997999999996| 5911400|\n",
-      "|             59.93|             60.73|             59.75|60.610001000000004| 9234600|\n",
-      "|             60.75|             61.25|         60.669998|61.009997999999996|10378800|\n",
-      "|         60.810001|             60.98|60.509997999999996|             60.91| 7134100|\n",
-      "|             60.75|              62.0|             60.75|61.389998999999996| 7362800|\n",
-      "|             61.18|61.610001000000004|61.040001000000004|         61.470001| 5915800|\n",
-      "|         61.799999|             61.84|             60.77|         60.970001| 7436200|\n",
-      "|60.860001000000004|         61.119999|60.540001000000004|60.709998999999996| 6287300|\n",
-      "|         60.470001|             61.32|         60.349998|         61.299999| 7636900|\n",
-      "|         61.529999|             61.57|         60.580002|61.360001000000004| 9761500|\n",
-      "+------------------+------------------+------------------+------------------+--------+\n",
-      "only showing top 20 rows\n",
+      "+-------+--------+--------+--------+--------+--------+--------+\n",
+      "|summary|    Open|    Open|    High|     Low|   Close|  Volume|\n",
+      "+-------+--------+--------+--------+--------+--------+--------+\n",
+      "|  count|1,258.00|1,258.00|1,258.00|1,258.00|1,258.00|    1258|\n",
+      "|   mean|   72.36|   72.36|   72.84|   71.92|   72.39| 8222093|\n",
+      "| stddev|    6.77|    6.77|    6.77|    6.74|    6.76| 4519780|\n",
+      "|    min|   56.39|   56.39|   57.06|   56.30|   56.42| 2094900|\n",
+      "|    max|   90.80|   90.80|   90.97|   89.25|   90.47|80898100|\n",
+      "+-------+--------+--------+--------+--------+--------+--------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select(['Open', 'High', 'Low', 'Close', 'Volume']).show()"
+    "result.select('summary', format_number(result['Open'].cast('float'),2).alias('Open'),\n",
+    "                format_number(result['Open'].cast('float'),2).alias('Open'),\n",
+    "                format_number(result['High'].cast('float'),2).alias('High'),\n",
+    "              format_number(result['Low'].cast('float'),2).alias('Low'),\n",
+    "              format_number(result['Close'].cast('float'),2).alias('Close'),\n",
+    "              result['Volume'].cast('int')).alias('Volume').show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+--------+--------+--------+--------+--------+\n",
-      "|summary|    Open|    High|     Low|   Close|  Volume|\n",
-      "+-------+--------+--------+--------+--------+--------+\n",
-      "|  count|1,258.00|1,258.00|1,258.00|1,258.00|    1258|\n",
-      "|   mean|   72.36|   72.84|   71.92|   72.39| 8222093|\n",
-      "| stddev|    6.77|    6.77|    6.74|    6.76| 4519781|\n",
-      "|    min|   56.39|   57.06|   56.30|   56.42| 2094900|\n",
-      "|    max|   90.80|   90.97|   89.25|   90.47|80898100|\n",
-      "+-------+--------+--------+--------+--------+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -300,42 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+\n",
-      "|            HV Ratio|\n",
-      "+--------------------+\n",
-      "|4.819714653321546E-6|\n",
-      "|6.290848613094555E-6|\n",
-      "|4.669412994783916E-6|\n",
-      "|7.367338463826307E-6|\n",
-      "|8.915604778943901E-6|\n",
-      "|8.644477436914568E-6|\n",
-      "|9.351828421515645E-6|\n",
-      "| 8.29141562102703E-6|\n",
-      "|7.712212102001476E-6|\n",
-      "|7.071764823529412E-6|\n",
-      "|1.015495466386981E-5|\n",
-      "|6.576354146362592...|\n",
-      "| 5.90145296180676E-6|\n",
-      "|8.547679455011844E-6|\n",
-      "|8.420709512685392E-6|\n",
-      "|1.041448341728929...|\n",
-      "|8.316075414862431E-6|\n",
-      "|9.721183814992126E-6|\n",
-      "|8.029436027707578E-6|\n",
-      "|6.307432259386365E-6|\n",
-      "+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -347,20 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2015, 1, 13, 0, 0)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -372,22 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------------+\n",
-      "|       avg(Close)|\n",
-      "+-----------------+\n",
-      "|72.38844998012726|\n",
-      "+-----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -399,31 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+-----------+\n",
-      "|max(Volume)|min(Volume)|\n",
-      "+-----------+-----------+\n",
-      "|   80898100|    2094900|\n",
-      "+-----------+-----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -435,20 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "81"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -461,20 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.141494435612083"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -487,22 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+\n",
-      "| corr(High, Volume)|\n",
-      "+-------------------+\n",
-      "|-0.3384326061737161|\n",
-      "+-------------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -514,26 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+---------+\n",
-      "|Year|max(High)|\n",
-      "+----+---------+\n",
-      "|2015|90.970001|\n",
-      "|2013|81.370003|\n",
-      "|2014|88.089996|\n",
-      "|2012|77.599998|\n",
-      "|2016|75.190002|\n",
-      "+----+---------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -546,33 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+-----------------+\n",
-      "|Month|       avg(Close)|\n",
-      "+-----+-----------------+\n",
-      "|    1|71.44801958415842|\n",
-      "|    2|  71.306804443299|\n",
-      "|    3|71.77794377570092|\n",
-      "|    4|72.97361900952382|\n",
-      "|    5|72.30971688679247|\n",
-      "|    6| 72.4953774245283|\n",
-      "|    7|74.43971943925233|\n",
-      "|    8|73.02981855454546|\n",
-      "|    9|72.18411785294116|\n",
-      "|   10|71.57854545454543|\n",
-      "|   11| 72.1110893069307|\n",
-      "|   12|72.84792478301885|\n",
-      "+-----+-----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
