--- a/Spark DataFrame Missing Data.ipynb
+++ b/Spark DataFrame Missing Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "17e136a2",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2c38d48a",
    "metadata": {},
    "outputs": [],
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0ae458f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.csv('../course-material/Spark_DataFrames/ContainsNull.csv', header=True, inferSchema=True)"
+    "df = spark.read.csv('./course-material/Spark_DataFrames/ContainsNull.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a017e198",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "5e766a26",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "b10e0e69",
    "metadata": {},
    "outputs": [
